fix message on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -166,6 +166,10 @@ nav {
         width: 420px;
         margin: auto;
         display: none;
+
+        @include phone(portrait) {
+            width: 100%;
+        }
     }
 }
 
